--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       color: #333;
       line-height: 1.4;
     }
+    
   </style>
 
   <!-- Sigma v2 (UMD) -->
@@ -109,9 +110,19 @@
   <script src="https://cdn.jsdelivr.net/npm/graphology@0.25.4/dist/graphology.umd.min.js"></script>
 </head>
 <body>
-  <div class="app">
-    <div id="container"></div>
+    <h1 style="
+  width: 66.666%;
+  margin: 0;
+  text-align: center;
+">
+  The actor network of Bong Joon Ho
+</h1>
 
+
+
+  <div class="app">
+
+    <div id="container"></div>
     <aside class="side">
       <div class="title">Suche</div>
 
