Alles von deutsch auf englisch

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Network</title>
@@ -124,13 +124,13 @@
 
     <div id="container"></div>
     <aside class="side">
-      <div class="title">Suche</div>
+      <div class="title">Search</div>
 
-      <input class="search" type="text" placeholder="Actor oder Film suchen..." />
+      <input class="search" type="text" placeholder="Search an actor or a movie..." />
 
       <div class="btnrow">
         <button class="btn" type="button">Reset</button>
-        <button class="btn" type="button">Zentrieren</button>
+        <button class="btn" type="button">Center</button>
       </div>
 
       <div class="legend">
@@ -139,14 +139,14 @@
       </div>
 
       <div class="desc">
-        Tippe einen Namen → Node + Nachbarn werden hervorgehoben<br>
-        Klick auf einen Node → Infos erscheinen im Sidepanel.<br>
-        Bei Movie-Nodes zeigt das Panel auch, wie viele Actors verbunden sind.
+         Type a name → the node and its neighbors are highlighted.<br>
+         Click on a node → details appear in the side panel.<br>
+          For movie nodes, the panel also shows how many actors are connected.
       </div>
 
       <div class="panel" id="sidepanel">
-        <h2>Kein Node ausgewählt</h2>
-        <p>Suche oder klicke im Netzwerk auf einen Actor oder Film.</p>
+        <h2>No node selected</h2>
+        <p>Search or click on an actor or a movie in the network.</p>
       </div>
     </aside>
   </div>
